--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ pandas>=2.0.0
 numpy>=1.24.0
 tqdm>=4.65.0
 torch>=2.0.0
-torchaudio>=2.0.0
 futures>=3.0.5
 os-sys>=2.1.4
+torchvision>=0.14.1
+torchaudio==2.3.0
+scikit-learn>=1.1.1
+openai-whisper
+gdown>=4.5.1
